--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <canvas id="canvas" width="720px" height="480px"></canvas>
   </body>
 
+  <script src="./models/world.class.js"></script>
+  <script src="./models/drawable-object.class.js"></script>
   <script src="./models/movalble-objects.class.js"></script>
+  <script src="./models/status-bar-coins.class.js"></script>
+  <script src="./models/status-bar-life.class.js"></script>
+  <script src="./models/status-bar-poison.class.js"></script>
   <script src="./models/sharky.class.js"></script>
   <script src="./models/pufferfish.class.js"></script>
   <script src="./models/jellyfish.class.js"></script>
@@ -21,8 +26,10 @@
   <script src="./models/coins.class.js"></script>
   <script src="./models/poison.class.js"></script>
   <script src="./models/background-object.class.js"></script>
-  <script src="./models/world.class.js"></script>
   <script src="./models/keyboard.class.js"></script>
+  <script src="./models/th"></script>
+  <script src="./models/throwable-object.class.js"></script>
+  <script src="./models/bubble.class.js"></script>
   <script src="./models/level.class.js"></script>
   <script src="./levels/level1.js"></script>
   <script src="./js/game.js"></script>
