--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="./img/icon/fish-solid.svg" type="image/svg+xml" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sharky | 2D Game</title>
   </head>
 
   <body onload="init()">
