up-date Bubble Attack

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </body>
 
   <script src="./models/drawable-object.class.js"></script>
-  <script src="./models/movalble-objects.class.js"></script>
+  <script src="./models/movable-objects.class.js"></script>
   <script src="./models/status-bar-coins.class.js"></script>
   <script src="./models/status-bar-life.class.js"></script>
   <script src="./models/status-bar-poison.class.js"></script>
@@ -75,6 +75,8 @@
   <script src="./models/keyboard.class.js"></script>
   <script src="./models/sharkyAttack.class.js"></script>
   <script src="./models/sharky.class.js"></script>
+  <!-- <script src="./models/bubble.class.js"></script> -->
+  <script src="./models/throwable-objects.class.js"></script>
   <script src="./models/level.class.js"></script>
   <script src="./levels/level1.js"></script>
   <script src="./models/world.class.js"></script>
