--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
   <script src="./models/keyboard.class.js"></script>
   <script src="./models/sharkyAttack.class.js"></script>
   <script src="./models/sharky.class.js"></script>
-  <!-- <script src="./models/bubble.class.js"></script> -->
   <script src="./models/throwable-objects.class.js"></script>
   <script src="./models/level.class.js"></script>
   <script src="./levels/level1.js"></script>
+  <script src="./models/collisionDetector.class.js"></script>
   <script src="./models/world.class.js"></script>
   <script src="./js/game.js"></script>
 </html>
