--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   <script src="./models/background-object.class.js"></script>
   <script src="./models/keyboard.class.js"></script>
   <script src="./models/sharkyAttack.class.js"></script>
+  <script src="./models/sharky-movements.class.js"></script>
   <script src="./models/sharky.class.js"></script>
   <script src="./models/throwable-objects.class.js"></script>
   <script src="./models/level.class.js"></script>
