--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
         <button id="close-btn" onclick="closeInstruction()">
           <img src="img/icon/xmark-solid.svg" alt="close" />
         </button>
-        <img class="instructions" src="img/6.Botones/Instructions 2.png" alt="Instructions" />
-        <div class="instructionGuide">Collect at least 2 coins and 3 poison vials to challenge the Boss!</div>
+        <img class="instructions" src="img/6.Botones/instructions_sharky.png" alt="Instructions" />
       </div>
 
       <div id="start-screen">
@@ -81,5 +80,7 @@
   <script src="./levels/level1.js"></script>
   <script src="./models/collisionDetector.class.js"></script>
   <script src="./models/world.class.js"></script>
+  <script src="./js/template.js"></script>
+  <script src="./js/sound-control.js"></script>
   <script src="./js/game.js"></script>
 </html>
